--- a/.github/workflows/build_frida_iOS.yml
+++ b/.github/workflows/build_frida_iOS.yml
@@ -30,6 +30,11 @@ jobs:
       run: |
         mkdir release-assets
 
+    - name: Get latest FRIDA_VERSION from Release
+      id: get_frida_version
+      run: |
+         echo "FRIDA_VERSION=$(curl -s https://api.github.com/repos/frida/frida/releases/latest | jq -r .tag_name)" >> $GITHUB_OUTPUT
+
     - name: Clone frida repository
       shell: bash
       run: |
@@ -48,9 +53,6 @@ jobs:
           -Dfrida-gum:gumjs=enabled
           -Dfrida-gum:v8=disabled
           -Dfrida-gum:database=disabled
-          -Dfrida-gum:frida_objc_bridge=enabled
-          -Dfrida-gum:frida_swift_bridge=enabled
-          -Dfrida-gum:frida_java_bridge=disabled
           -Dfrida-gum:tests=disabled
           -Dfrida-core:assets=installed
           -Dfrida-core:devkits=core
@@ -100,7 +102,7 @@ jobs:
     - name: Create release frida ${{ matrix.arch }}
       uses: ncipollo/release-action@main
       with:
-        tag: ${{ github.event.inputs.FRIDA_VERSION }}
-        name: "Frida ${{ github.event.inputs.FRIDA_VERSION }}"
+        tag: ${{ steps.get_frida_version.outputs.FRIDA_VERSION }}
+        name: "Frida ${{ steps.get_frida_version.outputs.FRIDA_VERSION }}"
         allowUpdates: true
         artifacts: release-assets/*
